# team2hackathon

./: .gitignore  README.md  datagen.py  experiments.ipynb  experiments.py  manage.py  pyproject.toml  readme.md
clinicians/: apps.py  forms.py  logic.py  urls.py  views.py
clinicians/templates/: patient_sheet.html
docker/: Dockerfile  docker-compose.debug.yml  docker-compose.yml
embedding/: chroma.py  models.py
futurecare/: asgi.py  settings.py  urls.py  wsgi.py
futurecare/src/: index.css
tests/: conftest.py
tests/django/: test_user_model.py
tests/factories/: django_factory.py
